# pixman

./: meson.build  meson_options.txt
pixman/: meson.build  pixman-implementation.c
